# pycheck

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer-old/: devcontainer.json
.devcontainer-old-old/: Dockerfile  devcontainer.json
.devcontainer-old/.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/.devcontainer/: devcontainer.json
dev/: README.md  api.yaml
dev/docker/: Dockerfile
dev/experiments/: Untitled.ipynb  eval_exp.py  eval_exp2.py  frame_and_stack.py  map_type.py  method_binding.py  sig.py  test_signature.py  type_guard.py  wrapt_exp.py
dev/experiments/variable_scope/: __init__.py  code_object.py  dict_non_destructive_update.py  injected_global.py  injected_global2.py  injected_global3 copy.py  injected_locals.py  locals_obj.py  maybe_solution.py  nested_lambda.py  normal_global.py  open_lambda.py
dev/motivating/: .test_benchmarks.py  .transformation.py  dask.py  dataframe.py  graph.py  series_map.py
docs/: README.md  install.md  quickstart.md
examples/: ex01.py  ex01_old.py  ex01_oldold.py  ex02.py  ex02_informal.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py  ex12.py  log  show-version.py  test_ex01.py
notebook/: README.md  Untitled.ipynb  custom_exist.ipynb  custom_sympy_types.ipynb  example_for_katsura.ipynb  exp1.ipynb  gen_base.ipynb  hyper-e.md  large-number.ipynb  perplexity.ipynb  seminar.ipynb
scripts/: list.py
src/pycheck/: __init__.py  __main__.py  code_gen.py  config.py  const.py  executor.py  gen.py  reftype.py  result.py  spec.py  toplevel.py  type_annotation.py  typecheck.py  user_util.py  util.py
src/pycheck/.old/: __init__.py  core.py  opcode.py  typecheckers.py
src/pycheck/codegen/: .code_builder.py  __init__.py  code_gen.py  codegen.py  codegen_base.py  codegen_new.py  const.py  gen_helper.py  generators.py  qe.py  sympy_lib.py
src/pycheck/examples/: sato.py
test/: README.md  test_main.py
test/benchmark/: test_naive_list_gen.py  test_pycheck_list_gen.py
test/deprecated/: test_typechecking.py
test/mypy/: ex01.py  ex02.py  ex03.py
test/mypy_examples/: sato_rt.py
test/sub_tests/: test_annotation.py  test_code.py  test_code_builder.py  test_codegen_gen.py  test_codegen_inner.py  test_codegen_tc.py  test_gen_gen.py  test_gen_parser.py  test_naive_list_gen.py  test_parsing.py  test_pycheck_type.py  test_qe.py  test_result.py  test_symbolic.py  test_version.py  utils.py
test/unittest/: functions.py  test_random.py
test/valid/: pandas_checkers.py  test_norm_type.py  test_parser.py  test_spec.py  test_typechecker.py  util.py
(+50 files in other folders)
