[tool.poetry]
name = "pycheck"
version = "0.5.0"
description = "A tool for property-based random testing (PBRT) for Python programs"
authors = ["Shin Saito <shinsa82@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "README.md"
repository = "https://github.com/shinsa82/pycheck"

[tool.poetry.dependencies]
python = "^3.10"
hypothesis = "*"
pandas = "*"
dask = "*"
decorator = "*"
more-itertools = "*"
lark-parser = "*"
environs = "*"
humanize = "*"
autopep8 = "*"
sympy = "^1.11.1"

[tool.poetry.dev-dependencies]
isort = "*"
pytest = "*"
mypy = "*"
pylint = "^2.12.2"

[tool.pylint.basic]
good-names = ["f", "g"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
