[tool.poetry]
name = "pycheck"
version = "0.5.0"
description = "A tool for property-based random testing (PBRT) for Python programs"
authors = ["Shin Saito <shinsa82@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "README.md"
repository = "https://github.com/shinsa82/pycheck"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
hypothesis = "*"
pandas = "*"
dask = "*"
decorator = "*"
more-itertools = "*"
environs = "*"
humanize = "*"
sympy = "^1.11.1"
lark = "^1.1.5"
autopep8 = "^2.0.1"
mathjax = "^0.1.2"
jupyterlab-mathjax3 = "^4.3.0"
rich = "^13.3.1"
pytest-repeat = "^0.9.1"
numpy = "^1.26.0"

[tool.poetry.dev-dependencies]
autopep8 = "*"
isort = "*"
pytest = "*"
mypy = "*"
jupyterlab = "4.*"

[tool.pylint.basic]
good-names = ["f", "g"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
