[tool.poetry]
name = "pycheck"
version = "0.6.0"
description = "A tool for property-based random testing (PBRT) for Python programs"
authors = ["Shin SAITO <shinsa82@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://github.com/shinsa82/pycheck"
repository = "https://github.com/shinsa82/pycheck"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
hypothesis = "*"
pandas = "*"
dask = "*"
decorator = "*"
more-itertools = "*"
environs = "*"
humanize = "*"
sympy = "*"
lark = "^1.1.5"
rich = "*"
numpy = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-repeat = "*"
mypy = "*"
jupyterlab = "4.*"
mathjax = "*"
jupyterlab-mathjax3 = "^4.3.0"
autopep8 = "*"
isort = "*"

[tool.pylint.basic]
good-names = ["f", "g"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
